<resources>
    <string name="app_name">Dasset_Wallet</string>
    <string name="prompt_quit">是否退出当前应用？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="done">完成</string>
    <string name="download">下载</string>
    <string name="backups">备份</string>
    <string name="later">以后再说</string>
    <string name="install">安装</string>
    <string name="splash_enter">闪耀开启</string>
    <string name="user_protocol">用户协议</string>
    <string name="accept_and_agree">接受并同意</string>
    <string name="dialog_prompt_get_version">正在获取版本信息,请稍后…</string>
    <string name="dialog_prompt_get_version_error">版本信息获取失败</string>
    <string name="dialog_prompt_get_version_success">当前为最新版本</string>
    <string name="dialog_prompt_download">如果下载失败，可以点击下载图标重试。</string>
    <string name="dialog_prompt_download_error">下载失败，稍后请重试。</string>
    <string name="dialog_prompt_download_url_error">更新失败，请前往官方网站下载。</string>
    <string name="dialog_prompt_install">是否安装新版本?</string>
    <string name="dialog_prompt_install_error">安装失败</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="dialog_prompt_create_wallet">正在创建钱包,请稍后…</string>
    <string name="dialog_prompt_create_wallet_error">创建钱包失败!</string>
    <string name="wallet_name">钱包名称</string>
    <string name="hint_wallet_name">请为你的钱包名称</string>
    <string name="prompt_wallet_name">钱包名称不能为空</string>
    <string name="transaction_password">交易密码</string>
    <string name="hint_transaction_password">请输入交易密码</string>
    <string name="confirm_transaction_password">确认交易密码</string>
    <string name="hint_confirm_password">请确认交易密码</string>
    <string name="prompt_transaction_password1">交易密码不能为空</string>
    <string name="prompt_transaction_password2">两次输入密码不一致</string>
    <string name="create_account_submit">提交</string>
    <string name="prompt_create_account1">请创新Dasset账户的交易密码，8–18位数字字母组合。</string>
    <string name="prompt_create_account2">该密码将用于账户金额的消费及转账，请您务必妥善保存，丢失密码将没有任何方法找回。</string>
    <string name="prompt_create_account3">请妥善保管您设置的交易密码，丢失将无法找回。是否确认提交？</string>
    <string name="prompt_create_account4">为避免账户丢失，请备份好密钥文件，是否立即备份？</string>
    <string name="prompt_create_account5">
        强烈建议您在使用钱包前做好备份，导出 [ 助记词 ] 或 Keystore存储在安全的地方，然后开始尝试转入小额资产并启用。
    </string>
    <string name="dialog_prompt_create_account6">正在创建账户，请稍后</string>
    <string name="create_wallet_success">创建钱包成功</string>
    <string name="backups_wallet">备份钱包</string>
    <string name="backups_mnemonic_code">备份助记词</string>
    <string name="backups_mnemonic_code_prompt1">请抄写您的钱包助记词</string>
    <string name="backups_mnemonic_code_prompt2">助记词由12组随机英文单词组成。便与恢复钱包，请将它抄写下来保存到安全的地方。</string>
    <string name="backups_mnemonic_code_prompt3">请确认您的钱包助记词</string>
    <string name="backups_mnemonic_code_prompt4">请按保存的助记词顺序，依次点击下列助记词，以确认您的备份助记词填写正确。</string>
    <string name="dialog_prompt_verify_backups_mnemonic_code_error">助记词校验失败，请检查备份。</string>
    <string name="how_to_backups">如何备份</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="next">下一步</string>
    <string name="address2">地址</string>
    <string name="add_account">添加账户资产</string>
    <string name="dialog_prompt_wallet">为了保护您的比特币\n\n&#042;&#160;&#160;请不要卸载钱包\n\n&#042;&#160;&#160;不要清除钱包数据\n\n&#042;&#160;&#160;请牢记您的密码</string>
    <string name="dialog_prompt">提示</string>
    <string name="dialog_prompt_setting">设置</string>
    <string name="dialog_prompt_cancel">取消</string>
    <string name="dialog_prompt_confirm">确定</string>
    <string name="dialog_prompt_known">知道了</string>
    <string name="dialog_prompt_save">保存</string>
    <string name="dialog_prompt_share">分享</string>
    <string name="dialog_prompt_net_work_error">网络不可用,请先设置网络!</string>
    <string name="dialog_prompt_permission_error">
        我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！
    </string>
    <string name="request_data_error">网络交互异常</string>
    <string name="dialog_prompt_import_account1">
        1.将其他设备上（PC\移动端）的账户文件备份导出。\n\n2.通过其他应用传输该账户文件到当前手机，并保存。\n\n3.通过文件管理器找到存储路径，选择导入。
    </string>
    <string name="dialog_prompt_create_account_error1">资产帐户建立失败</string>
    <string name="dialog_prompt_create_account_error2">资产帐户用户名长度超过十位</string>
    <string name="dialog_prompt_import_account_to">备份至</string>
    <string name="dialog_prompt_account_info_error">账户信息异常</string>
    <string name="dialog_prompt_delete_wallet">删除钱包将无法恢复，请备份后操作，确定删除钱包？</string>
    <string name="dialog_prompt_delete_account_error">账户信息异常</string>
    <string name="dialog_prompt_unknow_error">未知错误</string>
    <string name="account_info_send">发送</string>
    <string name="account_info_copy">复制成功</string>
    <string name="account_info_amount">金额</string>
    <string name="account_info_transaction_record">此地址下的资产交易</string>
    <string name="account_info_transaction_record_empty">没有找到此地址的交易\n它可能还没有在网络上出现过</string>
    <string name="qrcode_recognition_scan">扫码</string>
    <string name="qrcode_recognition_album">从相册添加</string>
    <string name="dialog_prompt_qrcode_recognition">正在识别二维码图片，请稍后</string>
    <string name="dialog_prompt_qrcode_recognition_error">识别二维码图片失败</string>
    <string name="dialog_prompt_get_qrcode_bitmap_error">二维码图片获取失败</string>
    <string name="dialog_prompt_import_account2">正在导入账户，请稍后</string>
    <string name="dialog_prompt_import_account_error">导入账户失败</string>
    <string name="dialog_prompt_get_qrcode_bitmap">正在获取二维码图片</string>
    <string name="dialog_prompt_file_manager_error">未找到系统文件管理器，请使用第三方软件进行手动操作。</string>
    <string name="dialog_prompt_qrcode_save">正在保存二维码图片</string>
    <string name="dialog_prompt_qrcode_save_success">二维码保存成功</string>
    <string name="dialog_prompt_qrcode_save_error">二维码保存失败</string>
    <string name="dialog_prompt_qrcode_share_success">二维码分享成功</string>
    <string name="dialog_prompt_qrcode_share_error">二维码分享失败</string>
    <string name="account_rename">重新命名</string>
    <string name="import_account">导入账户</string>
    <string name="prompt_import_account">请输入交易密码验证Dasset权限</string>
    <string name="account_setting">账户设置</string>
    <string name="update">更新</string>
    <string name="about">关于</string>
    <string name="footer_load_all">已经加载全部内容</string> 
    <string name="footer_loading">正在加载中...</string> 
    <string name="footer_load_error">出错了，点击重新加载！</string>

</resources>
