<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.dasset.wallet.ui.activity.SettingActivity">

    <include
        android:id="@+id/inToolbar"
        layout="@layout/view_toolbar"/>

    <include layout="@layout/view_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:drawableEnd="@mipmap/icon_arrow"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:text="@string/update"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16"/>

        <include layout="@layout/view_line"/>

        <TextView
            android:id="@+id/tvUserProtocol"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:drawableEnd="@mipmap/icon_arrow"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:text="@string/user_protocol"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16"/>

        <include layout="@layout/view_line"/>

    </LinearLayout>


    <include
        layout="@layout/view_line"/>

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:drawableEnd="@mipmap/icon_arrow"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/dp_15"
        android:text="@string/about"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"/>

    <include layout="@layout/view_line"/>


</LinearLayout>