<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.dasset.wallet.ui.activity.BackupsMnemonicCodeActivity">

    <include
        android:id="@+id/inToolbar"
        layout="@layout/view_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/backups_mnemonic_code_prompt3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/backups_mnemonic_code_prompt4"
        android:textColor="@color/color_9b9b9b"
        android:textSize="@dimen/sp_14"/>

    <TextView
        android:id="@+id/tvBackupsMnemonicCode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/rectangle_f9f8fc1"
        android:gravity="center_vertical"
        android:lineSpacingExtra="@dimen/dp_15"
        android:padding="@dimen/dp_25"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/tvBackupsMnemonicCode2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_15"
        android:gravity="center_vertical"
        android:lineSpacingExtra="@dimen/dp_15"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_5757ff"
        android:text="@string/next"
        android:textColor="@android:color/white"/>

</LinearLayout>
