<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f8f8"
    android:orientation="vertical"
    tools:context="com.dasset.wallet.ui.activity.AccountInfoActivity">

    <include
        android:id="@+id/inToolbar"
        layout="@layout/view_toolbar"/>

    <include layout="@layout/view_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@android:color/white"
        android:orientation="vertical">

        <include layout="@layout/view_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/account_rename"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"/>

            <RelativeLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_48"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/etWalletName"
                    style="@style/edit_content"
                    android:hint="@string/hint_wallet_name"
                    android:inputType="text"/>

                <ImageButton
                    android:id="@+id/ibWalletNameEmpty"
                    style="@style/edit_content_delete1"
                    android:contentDescription="@null"/>
            </RelativeLayout>

        </LinearLayout>

        <include layout="@layout/view_line"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_b7b7fa"
        android:enabled="false"
        android:text="@string/confirm"
        android:textColor="@color/color_d1d1fb"/>

</LinearLayout>
