<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_b0000000"
    tools:context=".ui.activity.PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/prompt_import_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14"/>

        <include layout="@layout/view_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_15">

            <EditText
                android:id="@+id/etTransactionPassword"
                style="@style/edit_content"
                android:hint="@string/hint_transaction_password"
                android:inputType="textPassword"/>

            <ImageButton
                android:id="@+id/ibTransactionPasswordDisplay"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="@dimen/dp_5"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_eye_on"/>

            <ImageButton
                android:id="@+id/ibTransactionPasswordEmpty"
                style="@style/edit_content_delete2"
                android:layout_toStartOf="@id/ibTransactionPasswordDisplay"
                android:contentDescription="@null"/>
        </RelativeLayout>

        <include layout="@layout/view_line"/>

        <Button
            android:id="@+id/btnImport"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_b7b7fa"
            android:enabled="false"
            android:text="@string/import_account"
            android:textColor="@color/color_d1d1fb"/>

    </LinearLayout>

</RelativeLayout>
