<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.dasset.wallet.ui.activity.WalletInfoActivity">

    <include
        android:id="@+id/inToolbar"
        layout="@layout/view_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inToolbar"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWalletName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tvWalleAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/wallet_name"
            android:textColor="@color/color_c9c9c9"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tvWalletName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@color/color_c9c9c9"
            android:textSize="@dimen/sp_14"/>

        <include layout="@layout/view_line"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBackupsMnemonicCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_5757ff"
            android:text="@string/backups_mnemonic_code"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnDeleteWallet"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_f9f8fc1"
            android:text="@string/delete_wallet"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>
